--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# h2 console
+## h2 database web ??
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+## spring - h2 ??
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/workspaces/h2_db_files/dylc # embeded mode
+spring.datasource.username=sa
+spring.datasource.password=
 
