--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.h2.console.path=/h2-console
 
 ## spring - h2 ??
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/workspaces/h2_db_files/dylc # embeded mode
+spring.datasource.url=jdbc:h2:~/workspaces/h2_db_files/dylc
 spring.datasource.username=sa
 spring.datasource.password=
 
+
+spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=create
