--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=
 
 spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+# application-oauth.properties
+spring.profiles.includes = oauth
