--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,13 @@ spring.h2.console.path=/h2-console
 
 ## spring - h2 ??
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/workspaces/h2_db_files/dylc
+spring.datasource.url=jdbc:h2:tcp://localhost/~/workspaces/h2_db_files/dylc
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 
 spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
