--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
