--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,23 @@
+spring:
+  profiles:
+    active:
+      - local
+    group:
+      local:
+        - site-local
+        - db-local
+    include:
+      - db
+      - db-prod
+      - site
+
+
 # h2 console
 ## h2 database web ??
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-## spring - h2 ??
+  
+  ## spring - h2 ??
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/workspaces/h2_db_files/dylc
 spring.datasource.username=sa
